--- a/form/Manage_Order.resx
+++ b/form/Manage_Order.resx
@@ -141,4 +141,7 @@
   <metadata name="bgw_OrderLoader.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>150, 24</value>
   </metadata>
+  <metadata name="bgw_OrderDelete.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>299, 24</value>
+  </metadata>
 </root>
